<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.shs.vetterhealth.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never"
        android:icon="@drawable/ic_settings"
        />
    <item
        android:id="@+id/action_blog"
        android:orderInCategory="100"
        android:title="Blog"
        app:showAsAction="never"
        android:icon="@drawable/ic_forum"/>
    <item
        android:id="@+id/action_sleeptrack"
        android:orderInCategory="100"
        android:title="@string/sleeptrack"
        app:showAsAction="always"
        android:icon="@drawable/ic_sleep"/>
    <item
        android:id="@+id/action_chatbot"
        android:orderInCategory="100"
        android:title="@string/chatbot"
        app:showAsAction="never"
        android:icon="@drawable/ic_message_text"/>
    <item
        android:id="@+id/action_therapy"
        android:orderInCategory="100"
        android:title="@string/therapy"
        app:showAsAction="never"
        android:icon="@drawable/ic_charity"/>
    <item
        android:id="@+id/action_pillnotifier"
        android:orderInCategory="100"
        android:title="Pill Notifier"
        app:showAsAction="always"
        android:icon="@drawable/ic_bell_ring" />

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_plus"
        android:title="@string/add"
        app:showAsAction="always" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>
